# skeletal-playdate

./: .gitignore  CMakeLists.txt  Makefile  README.md  arm.cmake  build.sh  config.h.in
Source/: pdxinfo
include/: car_physics.hpp  drawing.hpp  memory.hpp  pd.hpp  sin_table.hpp
src/: gen_sintable.cpp  main.cpp  pd.cpp
